--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
       <div id="signup">
         <h1>Sign Up for Free</h1>
         <!-- <form action="/" method="post"> -->
-        <form >
+        <form>
 
           <div class="top-row">
             <div class="field-wrap">
@@ -57,7 +57,8 @@
               <input type="password" id="repeatPswd" required autocomplete="off" />
             </div>
 
-            <button type="submit" class="button button-block signup" />Get Started</button>
+            <button type="submit" class="button button-block signup">Get Started</button>
+
           </div>
 
         </form>
@@ -66,7 +67,7 @@
       <div id="login">
         <h1>Welcome Back!</h1>
         <!-- <form action="/" method="post"> -->
-        <form >
+        <form>
 
           <div class="top-row">
             <div class="field-wrap">
@@ -74,7 +75,7 @@
                 User Name
                 <span class="req">*</span>
               </label>
-              <input type="text" id="userName" required autocomplete="off" />
+              <input type="text" id="name" required autocomplete="off" />
             </div>
 
             <div class="field-wrap">
@@ -88,7 +89,10 @@
             <!-- <p class="remember">
             <a href="#">Remember me</a>
           </p> -->
-            <button class="button button-block login" />Log In</button>
+
+            <button type="submit" class="button button-block login">Log In</button>
+
+
           </div>
 
         </form>
@@ -98,6 +102,10 @@
     <!-- tab-content -->
   </div>
   <!-- /form -->
+
+  <a href="postSearch.html">
+    <button type="button" >Log In</button>
+  </a>
 
 
   <!-- <script src="cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" ></script> -->
