--- a/public/postSearch.html
+++ b/public/postSearch.html
@@ -15,6 +15,167 @@
 
 <body>
 
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3   postForm float-right">
+
+        <form>
+
+          <div class="form-group input-group">
+
+            <div class="input-group-prepend">
+
+              <i class="fa fa-user input-group-text" style="width: 46px;"></i>
+
+            </div>
+
+            <input name="" class="form-control" placeholder="Name" type="text">
+
+          </div>
+
+          <!-- form-group// -->
+
+          <div class="form-group input-group">
+
+            <div class="input-group-prepend">
+
+              <span class="input-group-text">
+
+                <i class="fa fa-male"></i>
+
+                <i class="fa fa-female"></i>
+
+              </span>
+
+            </div>
+
+            <!-- <span class="input-group-text"> Gender </span> -->
+
+            <div class="form-control">
+
+              <span>male </span>
+
+              <input type="radio" id="male" name="gender">
+
+              <span>female </span>
+
+              <input type="radio" id="female" name="gender">
+
+            </div>
+
+          </div>
+
+          <div class="form-group input-group">
+
+            <div class="input-group-prepend">
+
+              <i class="fa fa-map-marker input-group-text" style="width: 46px;"></i>
+
+            </div>
+
+            <input type="text" class="form-control" name="name" id="search" placeholder="Address">
+
+          </div>
+
+          <div class="form-group input-group">
+
+            <div class="input-group-prepend">
+
+              <i class="fa fa-map-marker input-group-text" style="width: 46px;"></i>
+
+            </div>
+
+            <input type="text" class="form-control" name="locality" id="city" placeholder="City">
+
+          </div>
+
+          <div class="form-group input-group">
+
+            <div class="input-group-prepend">
+
+              <i class="fa fa-hourglass-start input-group-text" style="width: 46px;"></i>
+
+            </div>
+
+            <input name="" class="form-control" placeholder="Departure time" type="text">
+
+          </div>
+
+          <div class="form-group input-group">
+
+            <div class="input-group-prepend">
+
+              <span class="input-group-text">
+
+                <img src="https://d30y9cdsu7xlg0.cloudfront.net/png/14382-200.png" style="width: 18.5px;">
+
+              </span>
+
+            </div>
+
+            <!-- <select class="custom-select"> -->
+
+            <select class="form-control">
+
+              <option selected="">Select distance</option>
+
+              <option value="1">0-2 Km</option>
+
+              <option value="2">2-5 Km</option>
+
+              <option value="3">5-10 Km</option>
+
+            </select>
+
+          </div>
+
+          <div class="form-group input-group">
+
+            <div class="input-group-prepend">
+
+              <span class="input-group-text">
+
+                <!-- <i class="fas fa-walking"></i> -->
+
+                <img src="https://d30y9cdsu7xlg0.cloudfront.net/png/19727-200.png" style="width: 18.5px;">
+
+              </span>
+
+            </div>
+
+            <select class="form-control">
+
+              <option selected="">Select training type</option>
+
+              <option value="1">Walking</option>
+
+              <option value="2">Running</option>
+
+            </select>
+
+          </div>
+
+          <!-- lat and lng -->
+          <div class="form-group">
+            <input type="text" class="form-control hide" name="lat" id="lat" placeholder="Latitude" readonly>
+          </div>
+          <div class="form-group">
+            <input type="text" class="form-control hide" name="lng" id="lng" placeholder="Longitude" readonly>
+          </div>
+
+
+          <input type="button" value="POST!">
+
+        </form>
+
+
+      </div>
+    </div>
+
+    <div class="col-md-6 col-md-offset-3 searchForm float-left ">
+<p >hello </p>
+
+  </div>
 
 
   <div class="posts"></div>
@@ -29,8 +190,25 @@
 
 </script>
 
-
   <script src="jquery/dist/jquery.js"></script>
+
+
+  <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> -->
+
+
+  <!-- <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/20625/jquery.geocomplete.min.js"></script> -->
+
+  <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBmLOl094Ko9FiCPESOZWJ4Id5vS5PtIw8&libraries=places"></script> -->
+
+  <script>
+//   $(document).ready(function(){
+//   // Call Geo Complete
+//   $("#search").geocomplete({details:"form#property"});
+// });
+
+  </script>
+
+
   <script src="handlebars/dist/handlebars.js"></script>
   <script src="main.js" type="module"></script>
 
