finish log in and sign up(need to remove alert)

--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,7 @@
                 Password
                 <span class="req">*</span>
               </label>
-              <input type="password" required autocomplete="off" />
+              <input type="password" id="pswdLogIn" required autocomplete="off" />
             </div>
 
             <!-- <p class="remember">
