--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,300,600' rel='stylesheet' type='text/css'>
-  <link href="bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+  <link href="bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="font-awesome/css/font-awesome.min.css">
+  <link href="style.css" rel="stylesheet">
   <link href="user.css" rel="stylesheet">
 
   <title>Run2gether</title>
@@ -38,7 +39,9 @@
                 User Name
                 <span class="req">*</span>
               </label>
-              <input type="text" id="userName" required autocomplete="off" />
+              <input type="text" id="userName"  required autocomplete="off" />
+              <span  class="d-none" id="usernameError">Username already exists. </span>
+
             </div>
 
             <div class="field-wrap">
@@ -55,6 +58,7 @@
                 <span class="req">*</span>
               </label>
               <input type="password" id="repeatPswd" required autocomplete="off" />
+              <span class="d-none" id="pswrdNotSameError">Passwords are not the same.\n Please reconfirm.</span>
             </div>
 
             <button type="submit" class="button button-block signup">Get Started</button>
@@ -66,8 +70,8 @@
 
       <div id="login">
         <h1>Welcome Back!</h1>
-        <!-- <form action="/" method="post"> -->
-        <form>
+        <form action="/postSearch.html" method="post">
+        <!-- <form> -->
 
           <div class="top-row">
             <div class="field-wrap">
@@ -76,6 +80,8 @@
                 <span class="req">*</span>
               </label>
               <input type="text" id="name" required autocomplete="off" />
+              <span  class="d-none" id="nameError">Username does not exist. </span>
+
             </div>
 
             <div class="field-wrap">
@@ -84,6 +90,7 @@
                 <span class="req">*</span>
               </label>
               <input type="password" id="pswdLogIn" required autocomplete="off" />
+              <span  class="d-none" id="pswdLogInError">Password is wrong. </span>
             </div>
 
             <!-- <p class="remember">
@@ -106,11 +113,16 @@
     <button type="button" >Log In</button>
   </a>
 
+
+
   <!-- <script src="cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" ></script> -->
-  <script src="jquery/dist/jquery.js"></script>
+  <script src="jquery/dist/jquery.min.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script> -->
+  <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script> -->
   <script src="handlebars/dist/handlebars.js"></script>
   <script src="avtiveTabFormLogSignup.js" type="text/javascript"></script>
-  <script src="main.js" type="module"></script>
+  <script src="main.js" type="module">
+  </script>
 
 </body>
 
