--- a/public/postSearch.html
+++ b/public/postSearch.html
@@ -15,6 +15,11 @@
 
 <body>
 
+  <div>
+    <span class="helloUser"></span>
+    <a href="index.html">Logged out</a>
+  </div>
+
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-md-offset-3   postForm float-right">
