--- a/public/postSearch.html
+++ b/public/postSearch.html
@@ -41,7 +41,7 @@
 
               <span>male </span>
 
-              <input type="radio" value="male" name="gender">
+              <input type="radio" value="male" name="gender" required>
 
               <span>female </span>
 
@@ -59,7 +59,7 @@
 
             </div>
 
-            <input type="text" class="form-control" name="name" id="address" placeholder="Address">
+            <input type="text" class="form-control" name="name" id="address" placeholder="Address" required>
 
           </div>
 
@@ -71,7 +71,7 @@
 
             </div>
 
-            <input type="text" class="form-control" name="locality" id="city" placeholder="City">
+            <input type="text" class="form-control" name="locality" id="city" placeholder="City" required>
 
           </div>
 
@@ -83,7 +83,7 @@
 
             </div>
 
-            <input name="" class="form-control" id="time" placeholder="Departure time" type="text">
+            <input name="" class="form-control" id="time" placeholder="Departure time" type="text" required>
 
           </div>
 
@@ -105,39 +105,23 @@
 
               <!-- <option value="0" selected="">Select distance</option> -->
               <option value="" >Select distance</option>
-
               <option value="1">0-2 Km</option>
-
               <option value="2">2-5 Km</option>
-
               <option value="3">5-10 Km</option>
-
             </select>
-
           </div>
 
           <div class="form-group input-group">
-
             <div class="input-group-prepend">
-
               <span class="input-group-text">
-
                 <!-- <i class="fas fa-walking"></i> -->
-
                 <img src="https://d30y9cdsu7xlg0.cloudfront.net/png/19727-200.png" style="width: 18.5px;">
-
               </span>
-
             </div>
-
             <select class="form-control" id="myType" required>
-
               <option value="">Select training type</option>
-
               <option value="1">Walking</option>
-
               <option value="2">Running</option>
-
             </select>
 
           </div>
