--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
       <div id="login">
         <h1>Welcome Back!</h1>
         <!-- <form action="./postSearch.html" id="formlogin"> -->
-        <form action="./postSearch.html" method="post" id="formlogin">
+        <form action="postSearch.html" method="post" id="formlogin">
         <!-- <form action="/logged" method="post" id="formlogin"> -->
         <!-- <form> -->
 
