signup & login with server

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
       <div id="signup">
         <h1>Sign Up for Free</h1>
         <!-- <form action="/" method="post"> -->
-        <form>
+        <form id="formsignup" method="POST">
 
           <div class="top-row">
             <div class="field-wrap">
@@ -39,8 +39,8 @@
                 User Name
                 <span class="req">*</span>
               </label>
-              <input type="text" id="userName"  required autocomplete="off" />
-              <span  class="d-none" id="usernameError">Username already exists. </span>
+              <input type="text" id="userName" name="userName" required autocomplete="off" />
+              <span class="d-none" id="usernameError">Username already exists. </span>
 
             </div>
 
@@ -49,7 +49,7 @@
                 Set A Password
                 <span class="req">*</span>
               </label>
-              <input type="password" id="pswd" required autocomplete="off" />
+              <input type="password" id="pswd" name="password" required autocomplete="off" />
             </div>
 
             <div class="field-wrap">
@@ -57,8 +57,8 @@
                 Repeat the Password
                 <span class="req">*</span>
               </label>
-              <input type="password" id="repeatPswd" required autocomplete="off" />
-              <span class="d-none" id="pswrdNotSameError">Passwords are not the same.\n Please reconfirm.</span>
+              <input type="password" id="repeatPswd" required name="rePassword" autocomplete="off" />
+              <span class="d-none" id="pswrdNotSameError">Passwords are not the same, Please reconfirm.</span>
             </div>
 
             <button type="submit" class="button button-block signup">Get Started</button>
@@ -70,10 +70,9 @@
 
       <div id="login">
         <h1>Welcome Back!</h1>
-        <!-- <form action="./postSearch.html" id="formlogin"> -->
-        <form action="postSearch.html" method="post" id="formlogin">
-        <!-- <form action="/logged" method="post" id="formlogin"> -->
-        <!-- <form> -->
+
+        <form method="POST" id="formlogin">
+          <!-- <div id="formlogin" > -->
 
           <div class="top-row">
             <div class="field-wrap">
@@ -82,7 +81,7 @@
                 <span class="req">*</span>
               </label>
               <input type="text" id="name" name="userName" required autocomplete="off" />
-              <span  class="d-none" id="nameError">Username does not exist. </span>
+              <span class="d-none" id="nameError">Username does not exist. </span>
 
             </div>
 
@@ -92,7 +91,7 @@
                 <span class="req">*</span>
               </label>
               <input type="password" id="pswdLogIn" name="password" required autocomplete="off" />
-              <span  class="d-none" id="pswdLogInError">Password is wrong. </span>
+              <span class="d-none" id="pswdLogInError">Password is wrong. </span>
             </div>
 
             <!-- <p class="remember">
@@ -100,10 +99,9 @@
           </p> -->
 
             <button type="submit" class="button button-block login">Log In</button>
-            <!-- <button type="button" class="button button-block login">Log In</button> -->
 
           </div>
-
+          <!-- </div> -->
         </form>
       </div>
 
@@ -113,7 +111,7 @@
   <!-- /form -->
 
   <a href="postSearch.html">
-    <button type="button" >Log In</button>
+    <button type="button">Log In</button>
   </a>
 
 
