success message when sign up

--- a/public/index.html
+++ b/public/index.html
@@ -63,6 +63,8 @@
 
             <button type="submit" class="button button-block signup">Get Started</button>
 
+            <div id="snackbar">successfully registered, please log in :)</div>
+
           </div>
 
         </form>
