added remember (not yet work)

--- a/public/index.html
+++ b/public/index.html
@@ -96,9 +96,9 @@
               <span class="d-none" id="pswdLogInError">Password is wrong. </span>
             </div>
 
-            <!-- <p class="remember">
-            <a href="#">Remember me</a>
-          </p> -->
+            <!-- <label>
+              <input type="checkbox" checked="checked" name="remember"> Remember me
+            </label> -->
 
             <button type="submit" class="button button-block login">Log In</button>
 
