--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
       <div id="signup">
         <h1>Sign Up for Free</h1>
         <!-- <form action="/" method="post"> -->
-        <form>
+        <form id="formsignup" method="POST">
 
           <div class="top-row">
             <div class="field-wrap">
@@ -39,8 +39,9 @@
                 User Name
                 <span class="req">*</span>
               </label>
-              <input type="text" id="userName"  required autocomplete="off" />
-              <span  class="d-none" id="usernameError">Username already exists. </span>
+              <input type="text" id="userName" name="userName" required autocomplete="off" />
+              <span class="d-none" id="usernameError">Username already exists. </span>
+
             </div>
 
             <div class="field-wrap">
@@ -48,7 +49,7 @@
                 Set A Password
                 <span class="req">*</span>
               </label>
-              <input type="password" id="pswd" required autocomplete="off" />
+              <input type="password" id="pswd" name="password" required autocomplete="off" />
             </div>
 
             <div class="field-wrap">
@@ -56,11 +57,13 @@
                 Repeat the Password
                 <span class="req">*</span>
               </label>
-              <input type="password" id="repeatPswd" required autocomplete="off" />
-              <span class="d-none" id="pswrdNotSameError">Passwords are not the same.\n Please reconfirm.</span>
+              <input type="password" id="repeatPswd" required name="rePassword" autocomplete="off" />
+              <span class="d-none" id="pswrdNotSameError">Passwords are not the same, Please reconfirm.</span>
             </div>
 
             <button type="submit" class="button button-block signup">Get Started</button>
+
+            <div id="snackbar">successfully registered, please log in :)</div>
 
           </div>
 
@@ -69,15 +72,19 @@
 
       <div id="login">
         <h1>Welcome Back!</h1>
-              <div id="formlogin">
+
+        <form method="POST" id="formlogin">
+          <!-- <div id="formlogin" > -->
+
           <div class="top-row">
             <div class="field-wrap">
               <label>
                 User Name
                 <span class="req">*</span>
               </label>
-              <input type="text" id="name" required autocomplete="off" />
-              <span  class="d-none" id="nameError">Username does not exist. </span>
+              <input type="text" id="name" name="userName" required autocomplete="off" />
+              <span class="d-none" id="nameError">Username does not exist. </span>
+
             </div>
 
             <div class="field-wrap">
@@ -85,19 +92,19 @@
                 Password
                 <span class="req">*</span>
               </label>
-              <input type="password" id="pswdLogIn" required autocomplete="off" />
-              <span  class="d-none" id="pswdLogInError">Password is wrong. </span>
+              <input type="password" id="pswdLogIn" name="password" required autocomplete="off" />
+              <span class="d-none" id="pswdLogInError">Password is wrong. </span>
             </div>
 
-            <!-- <p class="remember">
-            <a href="#">Remember me</a>
-          </p> -->
+            <!-- <label>
+              <input type="checkbox" checked="checked" name="remember"> Remember me
+            </label> -->
 
             <button type="submit" class="button button-block login">Log In</button>
 
           </div>
-
-        </div>
+          <!-- </div> -->
+        </form>
       </div>
 
     </div>
@@ -106,15 +113,19 @@
   <!-- /form -->
 
   <a href="postSearch.html">
-    <button type="button" >Log In</button>
+    <button type="button">Log In</button>
   </a>
 
 
+
   <!-- <script src="cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" ></script> -->
-  <script src="jquery/dist/jquery.js"></script>
+  <script src="jquery/dist/jquery.min.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script> -->
+  <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script> -->
   <script src="handlebars/dist/handlebars.js"></script>
   <script src="avtiveTabFormLogSignup.js" type="text/javascript"></script>
-  <script src="main.js" type="module"></script>
+  <script src="main.js" type="module">
+  </script>
 
 </body>
 
