--- a/public/postSearch.html
+++ b/public/postSearch.html
@@ -157,10 +157,9 @@
   </script>
 
 
-  <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/20625/jquery.geocomplete.min.js"></script>
+  <!-- <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/20625/jquery.geocomplete.min.js"></script> -->
 
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBmLOl094Ko9FiCPESOZWJ4Id5vS5PtIw8&libraries=places"></script> -->
-
+  <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCe49cNLpJ7eFgA2QJ3gJRhNi2WQRE3kyM&libraries=places"></script> -->
 
   <script>
     //   $(document).ready(function(){
