--- a/public/postSearch.html
+++ b/public/postSearch.html
@@ -17,7 +17,7 @@
 
   <div>
     <span class="helloUser"></span>
-    <a href="index.html">Logged out</a>
+    <a href="index.html" id="loggedOut">Logged out</a>
   </div>
 
   <div class="container">
