adding logo and change colors

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,10 @@
 </head>
 
 <body>
+<div class="container text-center">
+
+<!-- <img src="logo.png"> -->
+<img src="animationLogo2.gif">
 
   <div class="form">
     <ul class="tab-group">
@@ -111,7 +115,7 @@
     <!-- tab-content -->
   </div>
   <!-- /form -->
-
+</div>
   <a href="postSearch.html">
     <button type="button">Log In</button>
   </a>
