--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,9 @@
 <div class="container text-center">
 
 <!-- <img src="logo.png"> -->
-<img src="animationLogo2.gif">
+<img src="animationLogo2.gif" class="col-md-6 col-md-offset-3">
+<p class="description">Find your partners for running together,<br>
+    Or post to search for someone to run with!</p>
 
   <div class="form">
     <ul class="tab-group">
