--- a/public/postSearch.html
+++ b/public/postSearch.html
@@ -64,7 +64,7 @@
 
               <span>female </span>
 
-              <input type="radio" id="female" name="gender">
+              <input type="radio" value="female" name="gender">
 
             </div>
 
@@ -155,7 +155,7 @@
 
 
           <input type="submit" value="POST!" id="post">
-
+<span id="addedPost"></span>
         </form>
 
 
