--- a/public/index.html
+++ b/public/index.html
@@ -7,14 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,300,600' rel='stylesheet' type='text/css'>
-<<<<<<< HEAD
-  <link href="bootstrap/dist/css/bootstrap.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="font-awesome/css/font-awesome.min.css">
-=======
   <link href="bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="font-awesome/css/font-awesome.min.css">
   <link href="style.css" rel="stylesheet">
->>>>>>> 1523a64ef72d6653bd7bbb9d8a59d3e2728e560c
   <link href="user.css" rel="stylesheet">
 
   <title>Run2gether</title>
@@ -44,13 +39,9 @@
                 User Name
                 <span class="req">*</span>
               </label>
-<<<<<<< HEAD
-              <input type="text" id="userName" required autocomplete="off" />
-=======
               <input type="text" id="userName"  required autocomplete="off" />
               <span  class="d-none" id="usernameError">Username already exists. </span>
 
->>>>>>> 1523a64ef72d6653bd7bbb9d8a59d3e2728e560c
             </div>
 
             <div class="field-wrap">
@@ -67,10 +58,7 @@
                 <span class="req">*</span>
               </label>
               <input type="password" id="repeatPswd" required autocomplete="off" />
-<<<<<<< HEAD
-=======
               <span class="d-none" id="pswrdNotSameError">Passwords are not the same.\n Please reconfirm.</span>
->>>>>>> 1523a64ef72d6653bd7bbb9d8a59d3e2728e560c
             </div>
 
             <button type="submit" class="button button-block signup">Get Started</button>
@@ -82,13 +70,9 @@
 
       <div id="login">
         <h1>Welcome Back!</h1>
-<<<<<<< HEAD
-        <!-- <form action="/" method="post"> -->
-        <form>
-=======
-        <form action="/postSearch.html" method="post">
+        <!-- <form action="/postSearch.html" method="post"> -->
+          <div id="">
         <!-- <form> -->
->>>>>>> 1523a64ef72d6653bd7bbb9d8a59d3e2728e560c
 
           <div class="top-row">
             <div class="field-wrap">
@@ -97,11 +81,8 @@
                 <span class="req">*</span>
               </label>
               <input type="text" id="name" required autocomplete="off" />
-<<<<<<< HEAD
-=======
               <span  class="d-none" id="nameError">Username does not exist. </span>
 
->>>>>>> 1523a64ef72d6653bd7bbb9d8a59d3e2728e560c
             </div>
 
             <div class="field-wrap">
@@ -109,12 +90,8 @@
                 Password
                 <span class="req">*</span>
               </label>
-<<<<<<< HEAD
-              <input type="password" required autocomplete="off" />
-=======
               <input type="password" id="pswdLogIn" required autocomplete="off" />
               <span  class="d-none" id="pswdLogInError">Password is wrong. </span>
->>>>>>> 1523a64ef72d6653bd7bbb9d8a59d3e2728e560c
             </div>
 
             <!-- <p class="remember">
@@ -124,8 +101,8 @@
             <button type="submit" class="button button-block login">Log In</button>
 
           </div>
-
-        </form>
+        </div>
+        <!-- </form> -->
       </div>
 
     </div>
@@ -137,24 +114,11 @@
     <button type="button" >Log In</button>
   </a>
 
-<<<<<<< HEAD
   <!-- <script src="cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" ></script> -->
   <script src="jquery/dist/jquery.js"></script>
   <script src="handlebars/dist/handlebars.js"></script>
   <script src="avtiveTabFormLogSignup.js" type="text/javascript"></script>
   <script src="main.js" type="module"></script>
-=======
-
-
-  <!-- <script src="cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" ></script> -->
-  <script src="jquery/dist/jquery.min.js"></script>
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script> -->
-  <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script> -->
-  <script src="handlebars/dist/handlebars.js"></script>
-  <script src="avtiveTabFormLogSignup.js" type="text/javascript"></script>
-  <script src="main.js" type="module">
-  </script>
->>>>>>> 1523a64ef72d6653bd7bbb9d8a59d3e2728e560c
 
 </body>
 
