--- a/public/postSearch.html
+++ b/public/postSearch.html
@@ -15,12 +15,8 @@
 
 <body class="post-search-background">
 
-
-
-
   <!-- <div class="container"> -->
   <div class="container-fluid">
-
 
     <div class="row">
 
@@ -35,6 +31,9 @@
 
         <div class="row">
           <!-- <div class="col-md-6 col-md-offset-3 postForm float-right"> -->
+            <h2 id="flipPostForm">Want to add post? </h2>
+            <br>
+            <br>
           <form id="property1" class="col-md-6 col-md-offset-3 postForm float-right">
 
             <!-- <h2 id="flipPostForm">Want to add post? </h2> -->
@@ -124,9 +123,15 @@
           </form>
           <!-- </div> -->
 
+
+          <br>
+          <br>
           <!-- **************************************** -->
 
           <!-- <div class="col-md-6 col-md-offset-3 searchForm float-left "> -->
+
+
+          <h2 id="flipSearchForm">Want to search your partner?</h2>
 
           <form id="property2" class="col-md-6 col-md-offset-3 searchForm float-left ">
 
@@ -154,7 +159,6 @@
                 </span>
               </div>
 
-              <!-- <select class="custom-select"> -->
 
               <select class="form-control search-distance">
                 <option value="">Select distance</option>
@@ -178,19 +182,13 @@
               </select>
             </div>
 
-            <!-- lat and lng -->
-            <!-- <div class="form-group">
-                <input type="text" class="form-control d-none" name="lat" id="lat" placeholder="Latitude" readonly>
-              </div>
-              <div class="form-group">
-                <input type="text" class="form-control d-none" name="lng" id="lng" placeholder="Longitude" readonly>
-              </div> -->
-
             <button type="submit" class="button button-block searchBtn">SEARCH
               <i class="fa fa-search"></i>
             </button>
 
           </form>
+
+
 
           <!-- </div> -->
 
@@ -240,6 +238,16 @@
         console.log('set user name in Hello...');
         $('.helloUser').html(`Hello ${user.userName}`);
       }
+
+      $("#flipSearchForm").click(function () {
+        $("#property2").slideToggle("slow");
+      });
+
+
+      $("#flipPostForm").click(function () {
+        $("#property1").slideToggle("slow");
+      });
+
     });
   </script>
 
