add styling and change some js

--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
 
             <div class="field-wrap">
               <label>
-                Repeat the Password
+                Confirm Password
                 <span class="req">*</span>
               </label>
               <input type="password" id="repeatPswd" required name="rePassword" autocomplete="off" />
