--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 <!-- <img src="logo.png"> -->
 <img src="animationLogo2.gif" class="col-md-6 col-md-offset-3">
 <p class="description">Find your partners for running together,<br>
-    Or post to search for someone to run with!</p>
+    Or post your details, so someone will join you!</p>
 
   <div class="form">
     <ul class="tab-group">
