--- a/public/postSearch.html
+++ b/public/postSearch.html
@@ -9,7 +9,7 @@
   <link href="bootstrap/dist/css/bootstrap.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="font-awesome/css/font-awesome.min.css">
   <link href="style.css" rel="stylesheet">
-
+  <link href="http://weareoutman.github.io/clockpicker/dist/jquery-clockpicker.min.css" rel="stylesheet">
   <title>Run2gether search&post</title>
 </head>
 
@@ -26,6 +26,8 @@
           <i class="fa fa-sign-in"></i>
         </a>
       </div>
+
+      <div id="snackbar2" class="float-right ">Your post was published successfully! </div>
     </div>
 
     <div class="row">
@@ -80,7 +82,8 @@
               <div class="input-group-prepend">
                 <i class="fa fa-hourglass-start input-group-text"></i>
               </div>
-              <input name="" class="form-control" id="time" placeholder="Departure time" type="text" required>
+              <!-- <input name="" class="form-control" id="time" placeholder="Departure time" type="text" required> -->
+              <input id="time" value="" data-default="13:00" class="form-control" placeholder="Select departure time" required>
             </div>
 
             <div class="form-group input-group">
@@ -227,9 +230,17 @@
 
   <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/20625/jquery.geocomplete.min.js"></script>
 
+  <script src="http://weareoutman.github.io/clockpicker/dist/jquery-clockpicker.min.js"></script>
 
   <script>
     $(document).ready(function () {
+      // inital the clock input
+      let input = $('#time');
+      input.clockpicker({
+        autoclose: true
+      });
+
+
       // Call Geo Complete
       $("#address").geocomplete({
         details: "form#property1"
