adding joinMe func

--- a/public/postSearch.html
+++ b/public/postSearch.html
@@ -209,7 +209,7 @@
 
 
   <script id="post-template" type="text/x-handlebars-template">
-    <div class="post rounded" data-id="{{_id}}">
+    <div class="post rounded" data-id="{{idUser}}">
       <i class="fa fa-times-circle remove-post float-right"></i>
       <br>
       <h6>gender: {{gender}} </h6>
