adding client messafe funcs

--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,16 @@
 
             <div class="field-wrap">
               <label>
+                Phone Number
+                <span class="req">*</span>
+              </label>
+              <input type="text" id="phone" name="phone" required autocomplete="off" />
+              <span class="d-none" id="usernameError">numer need to be 10 digits. </span>
+
+            </div>
+
+            <div class="field-wrap">
+              <label>
                 Set A Password
                 <span class="req">*</span>
               </label>
