--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
                 <span class="req">*</span>
               </label>
               <input type="text" id="phone" name="phone" required autocomplete="off" />
-              <span class="d-none" id="usernameError">numer need to be 10 digits. </span>
+              <span class="d-none" id="phoneError">phone need to be 10 digits. </span>
 
             </div>
 
