upfate css| fix show serach result | add button of message

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 <!-- <img src="logo.png"> -->
 <img src="animationLogo2.gif" class="col-md-6 col-md-offset-3">
 <p class="description">Find your partners for running together,<br>
-    Or post your details, so someone will join you!</p>
+    Or add your own post, so someone will join you!</p>
 
   <div class="form">
     <ul class="tab-group">
@@ -128,9 +128,6 @@
   </div>
   <!-- /form -->
 </div>
-  <a href="postSearch.html">
-    <button type="button">Log In</button>
-  </a>
 
   <!-- <script src="cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" ></script> -->
   <script src="jquery/dist/jquery.js"></script>
