--- a/public/postSearch.html
+++ b/public/postSearch.html
@@ -18,6 +18,7 @@
   <!-- <div class="container"> -->
   <div class="container-fluid">
 
+
     <div class="row row1 ">
       <div class="hello col-md-3">
         <span class="helloUser"></span>
@@ -205,7 +206,9 @@
 
     </div>
 
-  </div>
+    <img src="animationLogo2.gif" class="col-md-6 col-md-offset-3 logo">
+
+  </div> <!-- "container-fluid" -->
 
 
 
