fix post button to center

--- a/public/postSearch.html
+++ b/public/postSearch.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" type="text/css" href="font-awesome/css/font-awesome.min.css">
   <link href="style.css" rel="stylesheet">
   <link href="http://weareoutman.github.io/clockpicker/dist/jquery-clockpicker.min.css" rel="stylesheet">
-  <title>Run2gether search&post</title>
+  <title>Run2gether</title>
 </head>
 
 <body class="post-search-background">
