--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <link href="style.css" rel="stylesheet">
   <link href="user.css" rel="stylesheet">
 
-  <title>Run2gether</title>
+  <title>Run2gether | logIn | signUp</title>
 </head>
 
 <body>
