--- a/public/postSearch.html
+++ b/public/postSearch.html
@@ -9,7 +9,7 @@
   <link href="bootstrap/dist/css/bootstrap.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="font-awesome/css/font-awesome.min.css">
   <link href="style.css" rel="stylesheet">
-  <link href="http://weareoutman.github.io/clockpicker/dist/jquery-clockpicker.min.css" rel="stylesheet">
+  <link href="https://weareoutman.github.io/clockpicker/dist/jquery-clockpicker.min.css" rel="stylesheet">
   <title>Run2gether</title>
 </head>
 
@@ -241,7 +241,7 @@
 
   <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/20625/jquery.geocomplete.min.js"></script>
 
-  <script src="http://weareoutman.github.io/clockpicker/dist/jquery-clockpicker.min.js"></script>
+  <script src="https://weareoutman.github.io/clockpicker/dist/jquery-clockpicker.min.js"></script>
 
 
 
@@ -272,7 +272,7 @@
         console.log(user.userName);
         // set the user name
         console.log('set user name in Hello...');
-        $('.helloUser').html(`Hello ${user.userName}`);
+        $('.helloUser').text(`Hello ${user.userName}`);
       }
 
       $("#flipSearchForm").click(function () {
