update css of index page | adding remove post from view

--- a/public/index.html
+++ b/public/index.html
@@ -12,14 +12,15 @@
   <link href="style.css" rel="stylesheet">
   <link href="user.css" rel="stylesheet">
 
-  <title>Run2gether | logIn | signUp</title>
+  <title>Run2gether | LogIn </title>
+  <link rel="shortcut icon" href="logo-icon.ico" />
 </head>
 
 <body>
 <div class="container text-center">
 
 <!-- <img src="logo.png"> -->
-<img src="animationLogo2.gif" class="col-md-6 col-md-offset-3">
+<img src="animationlogo3.gif" class="col-md-6 col-md-offset-3">
 <p class="description">Find your partners for running together,<br>
     Or add your own post, so someone will join you!</p>
 
@@ -79,7 +80,7 @@
 
             <button type="submit" class="button button-block signup">Get Started</button>
 
-            <div id="snackbar">successfully registered, please log in :)</div>
+            <div id="snackbar">Successfully registered, please log in :)</div>
 
           </div>
 
