--- a/public/postSearch.html
+++ b/public/postSearch.html
@@ -11,6 +11,7 @@
   <link href="style.css" rel="stylesheet">
   <link href="https://weareoutman.github.io/clockpicker/dist/jquery-clockpicker.min.css" rel="stylesheet">
   <title>Run2gether</title>
+  <link rel="shortcut icon" href="logo-icon.ico" />
 </head>
 
 <body class="post-search-background">
@@ -54,9 +55,9 @@
 
         <div class="row post-search-div">
 
-          <h2 id="flipPostForm">Want to add post? </h2>
+          <h2 id="flipPostForm" class="col-md-9">Want to add post? </h2>
 
-          <form id="property1" class="col-md-8 col-md-offset-3 postForm float-right">
+          <form id="property1" class="col-md-6 col-md-offset-3 postForm float-right">
 
             <div class="form-group input-group">
               <div class="input-group-prepend">
@@ -146,9 +147,9 @@
 
           <!-- **************************************** -->
 
-          <h2 id="flipSearchForm">Want to search?</h2>
+          <h2 id="flipSearchForm" class="col-md-9">Want to search?</h2>
           <!-- <i class="fa fa-search search-icon"></i> -->
-          <form id="property2" class="col-md-8 col-md-offset-3 searchForm float-left ">
+          <form id="property2" class="col-md-6 col-md-offset-3 searchForm float-left ">
 
 
             <div class="form-group input-group">
@@ -206,7 +207,7 @@
 
     </div>
 
-    <img src="animationLogo2.gif" class="col-md-6 col-md-offset-3 logo">
+    <img src="animationLogo3.gif" class="col-md-6 col-md-offset-3 logo">
 
   </div> <!-- "container-fluid" -->
 
