--- a/public/postSearch.html
+++ b/public/postSearch.html
@@ -207,7 +207,7 @@
 
     </div>
 
-    <img src="animationLogo3.gif" class="col-md-6 col-md-offset-3 logo">
+    <img src="animationlogo3.gif" class="col-md-6 col-md-offset-3 logo">
 
   </div> <!-- "container-fluid" -->
 
