--- a/public/postSearch.html
+++ b/public/postSearch.html
@@ -270,9 +270,9 @@
 
       let user = JSON.parse(localStorage.getItem('user'));
       if (user != null) {
-        console.log(user.userName);
+        //console.log(user.userName);
         // set the user name
-        console.log('set user name in Hello...');
+        //console.log('set user name in Hello...');
         $('.helloUser').text(`Hello ${user.userName}`);
       }
 
@@ -285,9 +285,9 @@
         $("#property1").slideToggle("slow");
       });
 
-      $("#flipMessage").click(function () {
-        $(".list-message").slideToggle("slow");
-      });
+      // $("#flipMessage").click(function () {
+      //   $(".list-message").slideToggle("slow");
+      // });
 
 
 
